# DriftDetectionWithExplainableAI

./: .flake8  .gitignore  LICENSE  README.md  concept_drift_feature_importance.py  data_drift.ipynb  debug_imports.py  pyproject.toml  reproduce_hyperplane.py  requirements.txt  test_output.txt
.github/workflows/: ci.yml
dashboard/: app.py  utils.py
dashboard/assets/: styles.css
dashboard/components/: settings.py  sidebar.py
dashboard/tabs/: __init__.py  data_visualization.py  decision_boundary.py  feature_importance_analysis.py  recurring_race_p.py
notebooks/: DDM.ipynb  adwin.ipynb  common.ipynb  data_drift.ipynb  data_drift_with_desc_stats.ipynb  prototype_drift_analysis.ipynb  recurring_drift.ipynb
scripts/: datasets_generator.py
sdbm/: pyvenv.cfg
sdbm/Scripts/: activate  activate.bat  activate.fish
sdbm/code/: X_cleveland.npy  X_ecoli.npy  X_post_drift.npy  X_post_drift_raw.npy  X_pre_drift.npy  X_pre_drift_raw.npy  bachelors_requirements.txt  dashboard.py  disagreement.py  experiment_blobs.py  experiments_4d_data_all_classifiers.py  experiments_dataset.py  generate_breast_data.py  generate_cleveland_data.py  generate_digits_data.py  generate_ecoli_data.py  generate_hyperplane_data.py  generate_ionosphere_data.py  generate_rbf_data.py  iris_experiment.sh  lamp.py  our_mnist.py  our_titanic.py  pipeline.sh  rbf_experiment.sh  requirements.txt  river_requirements.txt  test_hyperplane_data.py  y_cleveland.npy  y_ecoli.npy  (+2 more)
src/: BinaryErrorDriftDescriptor.py  common.py  feature_importance.py  plotting.py
tests/: test_datasets.py  test_models.py
(+158 files in other folders)
